[gd_scene load_steps=4 format=3 uid="uid://crdw1og70sc66"]

[ext_resource type="Script" uid="uid://fmr5ql3emdhf" path="res://scripts/game_manager.gd" id="1_hwd4i"]
[ext_resource type="Script" uid="uid://62esb7ebq3wk" path="res://scripts/main_song.gd" id="2_glms7"]

[sub_resource type="AudioStreamWAV" id="AudioStreamWAV_hwd4i"]

[node name="GameManager" type="Node"]
script = ExtResource("1_hwd4i")

[node name="WaveTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamWAV_hwd4i")
volume_db = -3.0
script = ExtResource("2_glms7")

[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
